--- a/templates/menu/topNavBar.html.twig
+++ b/templates/menu/topNavBar.html.twig
@@ -42,7 +42,7 @@
                             <img src="{{ asset('./images/profiles/profile_image_stock01.png') }}" alt="User Avatar" class="img-size-50 img-circle mr-3">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
-                                    Empleat
+                                    Supervisor
                                     <span class="float-right text-sm text-warning"><i class="fas fa-star"></i></span>
                                 </h3>
                                 <p class="text-sm">Missatge de prova</p>
@@ -62,7 +62,7 @@
                     <span class="badge badge-warning navbar-badge">9</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                    <span class="dropdown-item dropdown-header">Notificacions</span>
+                    <span class="dropdown-item dropdown-header">Notificacions (test)</span>
                     <div class="dropdown-divider"></div>
                     <a href="#" class="dropdown-item">
                         <i class="fas fa-envelope mr-2"></i> 3 missatges nous
