--- a/templates/modals/edit_profile.html.twig
+++ b/templates/modals/edit_profile.html.twig
@@ -10,9 +10,9 @@
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    <!-- form start -->
-                    <form role="form" action=" {{ path('editProfile') }}" method= "POST">
+                <!-- form start -->
+                <form role="form" action=" {{ path('editProfile') }}" method= "POST">
+                    <div class="modal-body">
                         <div class="card-body">
 
                             <div class="form-group"><i class="fas fa-envelope"></i>
@@ -66,23 +66,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="inputCheck">
-                                <label class="form-check-label" for="inputCheck">Check me out</label>
-                            </div>
                         </div>
                         <!-- /.card-body -->
-
-                        <div class="card-footer">
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </div>
-                    </form>
-
-                </div>
-                <div class="modal-footer justify-content-between">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
+                    </div>
+                    <div class="modal-footer justify-content-right">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
             </div>
             <!-- /.modal-content -->
         </div>
